--- a/expenses/templates/base.html
+++ b/expenses/templates/base.html
@@ -15,7 +15,7 @@
         <img class="login" src="{% static 'logo.png' %}" height="30"></img>
         <nav class="navigation">
             <a href="/">Home</a>
-            <a href="/balance/">Balance</a>
+            <a href="/balance/">Profile</a>
             <a href="/history/">History</a>
             <a href="/statistics/">Statistics</a>
             <a href="/logout/">Logout</a>
